force-app/main/default/objects/Opportunity/fields/ProposalSubmissionDates__c.field-meta.xml
<CustomField>
    <fullName>ProposalSubmissionDates__c</fullName>
    <description>Todas as datas em que foram enviadas propostas</description>
    <label>Datas de envio de proposta</label>
    <type>DateTime</type>
</CustomField>