force-app/main/default/objects/Opportunity/fields/Proposta_v_lida__c.field-meta.xml
<CustomField>
    <fullName>Proposta_v_lida__c</fullName>
    <formula>IF((Data_mais_recente_de_proposta__c + 7)  &gt;=  NOW()  , &quot;COM PROPOSTA VÁLIDA&quot;, &quot;SEM PROPOSTA VÁLIDA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existência de proposta válida</label>
    <type>Text</type>
</CustomField>