force-app/main/default/objects/Opportunity/fields/QuandoPretendeAnunciar__c.field-meta.xml
<CustomField>
    <fullName>QuandoPretendeAnunciar__c</fullName>
    <label>Quando pretende anunciar?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Imediatamente</fullName>
            </value>
            <value>
                <fullName>Entre 1 e 3 meses</fullName>
            </value>
            <value>
                <fullName>Mais de 3 meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>