force-app/main/default/objects/Opportunity/fields/Quantidade_de_propostas_enviadas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_propostas_enviadas__c</fullName>
    <label>Quantidade de propostas enviadas</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>