force-app/main/default/objects/Opportunity/fields/Quantidade_de_Vendas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Vendas__c</fullName>
    <formula>IF(ISPICKVAL(StageName, &quot;Ganho&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade de Vendas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>