force-app/main/default/objects/Opportunity/fields/Quantidade_Dias_Ultima_Atividade_c__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Dias_Ultima_Atividade_c__c</fullName>
    <formula>if (isblank( LastActivityDate), 999999,
today() -  LastActivityDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade_Dias_Ultima_Atividade__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>