force-app/main/default/objects/Opportunity/fields/Referencia_base_antiga__c.field-meta.xml
<CustomField>
    <fullName>Referencia_base_antiga__c</fullName>
    <label>Referência base antiga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base vendida</fullName>
            </value>
            <value>
                <fullName>Base ativa em negociação</fullName>
            </value>
            <value>
                <fullName>Base sem contato e tentativa de contato</fullName>
            </value>
            <value>
                <fullName>Base_Ativa_Negociacao_Futura</fullName>
            </value>
            <value>
                <fullName>Base Inativa</fullName>
            </value>
            <value>
                <fullName>Base lead ativa RD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>