force-app/main/default/objects/Opportunity/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>