force-app/main/default/objects/Opportunity/fields/SaleType__c.field-meta.xml
<CustomField>
    <fullName>SaleType__c</fullName>
    <description>Se é Cliente novo, upsell ou renovação</description>
    <label>Tipo de venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente novo</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>