force-app/main/default/objects/Opportunity/fields/SentProposalsCount__c.field-meta.xml
<CustomField>
    <fullName>SentProposalsCount__c</fullName>
    <description>Retorna o número de propostas feitas para a oportunidade.</description>
    <label>Quantidade de propostas enviadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>