force-app/main/default/objects/Opportunity/fields/SocialMedia_website__c.field-meta.xml
<CustomField>
    <fullName>SocialMedia_website__c</fullName>
    <description>URL da mídia social ou site</description>
    <label>Website de cadastro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>