force-app/main/default/objects/Opportunity/fields/Soma_das_cota_es__c.field-meta.xml
<CustomField>
    <fullName>Soma_das_cota_es__c</fullName>
    <label>Soma das cotações</label>
    <summarizedField>Quote.TotalPrice</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>