force-app/main/default/objects/Opportunity/fields/Telefone1__c.field-meta.xml
<CustomField>
    <fullName>Telefone1__c</fullName>
    <label>Telefone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>