force-app/main/default/objects/Opportunity/fields/Temperatura_da_negociacao__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_da_negociacao__c</fullName>
    <label>Temperatura da negociação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quente</fullName>
            </value>
            <value>
                <fullName>Morno</fullName>
            </value>
            <value>
                <fullName>Frio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>