force-app/main/default/objects/Opportunity/fields/Tipo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cliente__c</fullName>
    <description>Informa se é um cliente final ou se é uma agência</description>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência</fullName>
            </value>
            <value>
                <fullName>Cliente final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>