force-app/main/default/objects/Opportunity/fields/updateSGC__c.field-meta.xml
<CustomField>
    <fullName>updateSGC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>updateSGC</label>
    <type>Checkbox</type>
</CustomField>