force-app/main/default/objects/Opportunity/fields/UsuarioConversao__c.field-meta.xml
<CustomField>
    <fullName>UsuarioConversao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário de Conversão</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>