force-app/main/default/objects/Opportunity/fields/Valor_Bonificacao_Midia__c.field-meta.xml
<CustomField>
    <fullName>Valor_Bonificacao_Midia__c</fullName>
    <label>Valor Bonificação Mídia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>