force-app/main/default/objects/Opportunity/fields/Valor_final_da_venda__c.field-meta.xml
<CustomField>
    <fullName>Valor_final_da_venda__c</fullName>
    <label>Valor final da venda</label>
    <summarizedField>Quote.Valor_Final__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.Valor_Final__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>