force-app/main/default/objects/Opportunity/fields/Valor_m_dio_cota_es__c.field-meta.xml
<CustomField>
    <fullName>Valor_m_dio_cota_es__c</fullName>
    <formula>(Soma_das_cota_es__c-Desconto_total__c )/Cota_es_na_oportunidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor médio cotações</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>