force-app/main/default/objects/Opportunity/fields/Valor_Total_Neg_Fechada__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Neg_Fechada__c</fullName>
    <label>Valor Total Neg Fechada</label>
    <summarizedField>Quote.TotalAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.ExpirationDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2024</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>