force-app/main/default/objects/Opportunity/fields/ValorFinalMidia__c.field-meta.xml
<CustomField>
    <fullName>ValorFinalMidia__c</fullName>
    <label>Valor Final Mídia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>