force-app/main/default/objects/Opportunity/fields/ValueLeadScore__c.field-meta.xml
<CustomField>
    <fullName>ValueLeadScore__c</fullName>
    <label>ValueLeadScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>