force-app/main/default/objects/Opportunity/fields/ValueScoreFinal__c.field-meta.xml
<CustomField>
    <fullName>ValueScoreFinal__c</fullName>
    <label>Value Score Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>