force-app/main/default/objects/Opportunity/fields/Veiculacao__c.field-meta.xml
<CustomField>
    <fullName>Veiculacao__c</fullName>
    <label>Veiculação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mídia On</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Rádio</fullName>
            </value>
            <value>
                <fullName>OOH</fullName>
            </value>
            <value>
                <fullName>Mídia Off</fullName>
                <isActive>false</isActive>
                <label>Mídia Off</label>
            </value>
            <value>
                <fullName>Veiculação - RD</fullName>
                <isActive>false</isActive>
                <label>Veiculação - RD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>