force-app/main/default/objects/Opportunity/fields/Venda_Reversa_Midia__c.field-meta.xml
<CustomField>
    <fullName>Venda_Reversa_Midia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Venda reversa de mídia, onde os clientes indicados por empresas de mídias parceiras para venda de conteúdo</description>
    <label>Venda Reversa Mídia</label>
    <type>Checkbox</type>
</CustomField>