force-app/main/default/objects/Opportunity/fields/Vendedor_Varejo__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_Varejo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor Varejo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>