force-app/main/default/objects/Opportunity/fields/WhatsYourInstagram__c.field-meta.xml
<CustomField>
    <fullName>WhatsYourInstagram__c</fullName>
    <inlineHelpText>@username</inlineHelpText>
    <label>Instagram da Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>