force-app/main/default/objects/Opportunity/recordTypes/MidiasVendas.recordType-meta.xml
<RecordType>
    <fullName>MidiasVendas</fullName>
    <active>true</active>
    <businessProcess>Mídias Vendas</businessProcess>
    <label>Mídias Vendas</label>
</RecordType>