force-app/main/default/objects/Opportunity/recordTypes/VendaRD.recordType-meta.xml
<RecordType>
    <fullName>VendaRD</fullName>
    <active>true</active>
    <businessProcess>Venda RD</businessProcess>
    <label>Venda RD</label>
</RecordType>