force-app/main/default/objects/Opportunity/validationRules/Acc_CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_CNPJ</fullName>
    <active>true</active>
    <description>Se Fase de Opp for &quot;Negociação Fechada&quot;, preencher o campo CNPJ.</description>
    <errorConditionFormula>AND(
 NOT(OR(ISPICKVAL(StageName, &quot;Aprovado&quot;), ISPICKVAL(StageName, &quot;Qualificação&quot;), ISPICKVAL(StageName, &quot;Proposta Enviada&quot;), ISPICKVAL(StageName, &quot;Em Negociação&quot;), ISPICKVAL(StageName, &quot;Reunião Marcada&quot;), ISPICKVAL(StageName, &quot;Perdido&quot;))),
 ISBLANK( Account.CNPJ__c ),
 RecordType.DeveloperName == &quot;Varejo&quot;
)</errorConditionFormula>
    <errorMessage>Preencha o campo CNPJ no SGC.</errorMessage>
</ValidationRule>