force-app/main/default/objects/Opportunity/validationRules/Acc_Endereco.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_Endereco</fullName>
    <active>true</active>
    <description>Preencha o campo Endereço de Cobrança no Objeto Conta para avançar a fase.</description>
    <errorConditionFormula>AND(
NOT(OR(ISPICKVAL(StageName, &quot;Aprovado&quot;), ISPICKVAL(StageName, &quot;Qualificação&quot;), ISPICKVAL(StageName, &quot;Proposta Enviada&quot;), ISPICKVAL(StageName, &quot;Em Negociação&quot;), ISPICKVAL(StageName, &quot;Reunião Marcada&quot;), ISPICKVAL(StageName, &quot;Perdido&quot;))),
ISBLANK( Account.BillingAddress ),
RecordType.DeveloperName == &quot;Varejo&quot;
)</errorConditionFormula>
    <errorMessage>Preencha o campo Endereço</errorMessage>
</ValidationRule>