force-app/main/default/objects/Opportunity/validationRules/Acc_NomeFantasia.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_NomeFantasia</fullName>
    <active>false</active>
    <description>Preencha o campo Nome Fantasia no objeto Conta para avançar a fase.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Em Negociação&quot;),
ISBLANK(Account.TradeName__c )
)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Nome Fantasia&quot; no objeto Conta quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>