force-app/main/default/objects/Opportunity/validationRules/Acc_RazaoSocial.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_RazaoSocial</fullName>
    <active>true</active>
    <description>Torna o campo &quot;Razão social&quot; obrigatório a partir &quot;Negociação Fechada&quot;</description>
    <errorConditionFormula>NOT(OR(ISPICKVAL(StageName, &quot;Aprovado&quot;), ISPICKVAL(StageName, &quot;Qualificação&quot;), ISPICKVAL(StageName, &quot;Proposta Enviada&quot;), ISPICKVAL(StageName, &quot;Em Negociação&quot;), ISPICKVAL(StageName, &quot;Reunião Marcada&quot;), ISPICKVAL(StageName, &quot;Perdido&quot;))) &amp;&amp; ISBLANK(Account.CompanyName__c) &amp;&amp; RecordType.DeveloperName == &quot;Varejo&quot;</errorConditionFormula>
    <errorMessage>Preencha o campo Razão Social.</errorMessage>
</ValidationRule>