force-app/main/default/objects/Opportunity/validationRules/Acc_SocialMidia_Site.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_SocialMidia_Site</fullName>
    <active>false</active>
    <description>Preencha o campo Mídia Social ou Site no Objeto Conta.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Em Negociação&quot;),
ISBLANK( Account.SocialMedia_website__c )
)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Mídia Social&quot; no objeto Conta quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>