force-app/main/default/objects/Opportunity/validationRules/Acc_Tamanho.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_Tamanho</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(StageName, &quot;Negociação Fechada&quot;) &amp;&amp; ISBLANK(Account.Tamanho__c)</errorConditionFormula>
    <errorMessage>Preencha o campo Tamanho&quot; no objeto Conta quando chegar na etapa &quot;Negociação Fechada&quot;.</errorMessage>
</ValidationRule>