force-app/main/default/objects/Opportunity/validationRules/Acc_Telefone.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_Telefone</fullName>
    <active>false</active>
    <description>Torna o campo &quot;Telefone&quot; obrigatório a partir de &quot;Em negociação&quot;</description>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Em Negociação&apos;) &amp;&amp;
ISBLANK(Account.Phone)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Telefone/Phone&quot; no objeto Conta quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>