force-app/main/default/objects/Opportunity/validationRules/Acc_TipoDeIntermediador.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_TipoDeIntermediador</fullName>
    <active>false</active>
    <description>Torna o campo &quot;Tipo de intermediador&quot; obrigatório a partir de &quot;Em negociação&quot;</description>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Em Negociação&apos;) &amp;&amp;
ISPICKVAL(Account.Tipodeintermediador__c, &apos;&apos;)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Tipo de intermediador&quot; no objeto Conta quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>