force-app/main/default/objects/Opportunity/validationRules/Cotacao_politicas.validationRule-meta.xml
<ValidationRule>
    <fullName>Cotacao_politicas</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Em Negociação&apos;) &amp;&amp; 
ISBLANK(SyncedQuote.CommercialPolicy__c)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Políticas Comerciais&quot; no objeto Cotação quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>