force-app/main/default/objects/Opportunity/validationRules/Cotacao_ValorCampanhas.validationRule-meta.xml
<ValidationRule>
    <fullName>Cotacao_ValorCampanhas</fullName>
    <active>false</active>
    <description>Torna o campo &quot;Valor das campanhas&quot;, de cotação, obrigatório a partir da fase &quot;Em negociação&quot;</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Em Negociação&quot;),
ISBLANK(SyncedQuote.CampaignAmount__c)
)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Valor das campanhas&quot; no objeto Cotação quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>