force-app/main/default/objects/Opportunity/validationRules/Cotacao_ValorDireitoDeImagem.validationRule-meta.xml
<ValidationRule>
    <fullName>Cotacao_ValorDireitoDeImagem</fullName>
    <active>false</active>
    <description>Torna o campo &quot;Valor de Direito de imagem&quot;, de Cotação, obrigatório a partirdo estágio &quot;Em Negociação&quot;.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Em Negociação&quot;),
ISBLANK(SyncedQuote.ImageRightsValue__c)
)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Valor do direito de imagem&quot; no objeto Cotação quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>