force-app/main/default/objects/Opportunity/validationRules/Cotacao_ValorPecas.validationRule-meta.xml
<ValidationRule>
    <fullName>Cotacao_ValorPecas</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Em negociação&apos;) &amp;&amp; ISBLANK(SyncedQuote.PieceAmount__c)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Valor das peças&quot; no objeto Cotação quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>