force-app/main/default/objects/Opportunity/validationRules/Cotacao_ValorTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>Cotacao_ValorTotal</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Em Negociação&apos;) &amp;&amp; 
ISBLANK(SyncedQuote.TotalAmount__c)</errorConditionFormula>
    <errorMessage>Preencha o Campo &quot;Valor Total&quot; no objeto Cotação quando chegar na etapa &quot;Em negociação&quot;.</errorMessage>
</ValidationRule>