force-app/main/default/objects/Opportunity/validationRules/Opp_Bloquear_Campo_Midia.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Bloquear_Campo_Midia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Media__c ), ($User.ProfileId &lt;&gt; &apos;00eHp000002t35h&apos; &amp;&amp; $User.ProfileId &lt;&gt; &apos;00eHp000002fC4N&apos; &amp;&amp; $User.ProfileId &lt;&gt; &apos;00eHp000002fC4O&apos;))</errorConditionFormula>
    <errorMessage>Você não tem permissão para alterar o campo Mídia.</errorMessage>
</ValidationRule>