force-app/main/default/objects/Opportunity/validationRules/Opp_Bloquear_Mudanca_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Bloquear_Mudanca_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(OwnerId ), $User.ProfileId = &apos;00eHp000002fC4S&apos;)</errorConditionFormula>
    <errorMessage>Você não tem permissão para alterar o proprietário da Oportunidade</errorMessage>
</ValidationRule>