force-app/main/default/objects/Opportunity/validationRules/Opp_ContatoFinanceiro.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_ContatoFinanceiro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(OR(ISPICKVAL(StageName, &quot;Aprovado&quot;), ISPICKVAL(StageName, &quot;Qualificação&quot;), ISPICKVAL(StageName, &quot;Proposta Enviada&quot;), ISPICKVAL(StageName, &quot;Em Negociação&quot;), ISPICKVAL(StageName, &quot;Reunião Marcada&quot;), ISPICKVAL(StageName, &quot;Perdido&quot;))),
ISBLANK( ContatoFinanceiro__c ),
RecordType.DeveloperName == &quot;Varejo&quot;
)</errorConditionFormula>
    <errorMessage>Preencha o campo Contato Financeiro.</errorMessage>
</ValidationRule>