force-app/main/default/objects/Opportunity/validationRules/Opp_CotacaoPagamentoFuturo.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_CotacaoPagamentoFuturo</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Ganho Pagamento Futuro&apos;) &amp;&amp; CotacaoPagamentoFuturo__c &lt;= 0 &amp;&amp; RecordType.DeveloperName == &apos;Varejo&apos;</errorConditionFormula>
    <errorMessage>É necessário ter uma cotação com pagamento futuro marcado para colocar esse estágio</errorMessage>
</ValidationRule>