force-app/main/default/objects/Opportunity/validationRules/Opp_CotacaoSincronizada.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_CotacaoSincronizada</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Ganho&apos;) &amp;&amp; CotacaoSincronizada__c &lt;= 0 &amp;&amp; RecordType.DeveloperName == &apos;Varejo&apos;</errorConditionFormula>
    <errorMessage>Para prosseguir, é necessário ter uma ou mais cotações sincronizadas.</errorMessage>
</ValidationRule>