force-app/main/default/objects/Opportunity/validationRules/Opp_DataEnvioLinkPagamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_DataEnvioLinkPagamento</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Negociação Fechada&quot;),
ISBLANK(PaymentLink_sendingDate__c)
)</errorConditionFormula>
    <errorDisplayField>PaymentLink_sendingDate__c</errorDisplayField>
    <errorMessage>Preencha o campo &quot;Data de envio do link de pagamento&quot; no objeto Oportunidade quando chegar na etapa &quot;Negociação Fechada&quot;.</errorMessage>
</ValidationRule>