force-app/main/default/objects/Opportunity/validationRules/Opp_DataInicioContrato.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_DataInicioContrato</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Ganho&quot;),
ISBLANK(SyncedQuote.DatadePagamento__c)
)</errorConditionFormula>
    <errorMessage>Preencha o campo &quot;Data de Pagamento&quot; no objeto Cotação quando chegar na etapa &quot;Ganho&quot;.</errorMessage>
</ValidationRule>